--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,12 @@ jobs:
         run: npm test
       - name: Build
         run: npm run build
+        env:
+          - REACT_APP_FIREBASE_KEY = ${{ secrets.FIREBASE_API_KEY }}
+          - REACT_APP_FIREBASE_AUTH_DOMAIN = ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+          - REACT_APP_FIREBASE_DATABASE_URL = ${{ secrets.FIREBASE_DATABASE_URL }}
+          - REACT_APP_FIREBASE_MESSAGING_SENDER_ID = ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+          - REACT_APP_FIREBASE_PROJECT_ID = ${{ secrets.FIREBASE_PROJECT_ID }}
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
