--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,13 @@ on:
     branches:
       - master
 
+env:
+  - REACT_APP_FIREBASE_KEY = ${{ secrets.FIREBASE_API_KEY }}
+  - REACT_APP_FIREBASE_AUTH_DOMAIN = ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+  - REACT_APP_FIREBASE_DATABASE_URL = ${{ secrets.FIREBASE_DATABASE_URL }}
+  - REACT_APP_FIREBASE_MESSAGING_SENDER_ID = ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+  - REACT_APP_FIREBASE_PROJECT_ID = ${{ secrets.FIREBASE_PROJECT_ID }}
+
 jobs:
   build:
     name: Build
@@ -12,19 +19,13 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Install Dependencies
-        run: npm install
+        run: yarn
       - name: Run Tests
         env:
           CI: true
-        run: npm test
+        run: yarn test
       - name: Build
-        run: npm run build
-        env:
-          - REACT_APP_FIREBASE_KEY = ${{ secrets.FIREBASE_API_KEY }}
-          - REACT_APP_FIREBASE_AUTH_DOMAIN = ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-          - REACT_APP_FIREBASE_DATABASE_URL = ${{ secrets.FIREBASE_DATABASE_URL }}
-          - REACT_APP_FIREBASE_MESSAGING_SENDER_ID = ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-          - REACT_APP_FIREBASE_PROJECT_ID = ${{ secrets.FIREBASE_PROJECT_ID }}
+        run: yarn build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
