--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,6 @@ on:
     branches:
       - master
 
-env:
-  - REACT_APP_FIREBASE_KEY = ${{ secrets.FIREBASE_API_KEY }}
-  - REACT_APP_FIREBASE_AUTH_DOMAIN = ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-  - REACT_APP_FIREBASE_DATABASE_URL = ${{ secrets.FIREBASE_DATABASE_URL }}
-  - REACT_APP_FIREBASE_MESSAGING_SENDER_ID = ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
-  - REACT_APP_FIREBASE_PROJECT_ID = ${{ secrets.FIREBASE_PROJECT_ID }}
-
 jobs:
   build:
     name: Build
@@ -19,13 +12,19 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@master
       - name: Install Dependencies
-        run: yarn
+        run: npm install
       - name: Run Tests
         env:
           CI: true
-        run: yarn test
+        run: npm test
       - name: Build
-        run: yarn build
+        run: npm run build
+        env:
+          REACT_APP_FIREBASE_KEY: ${{ secrets.FIREBASE_API_KEY }}
+          REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
+          REACT_APP_FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
+          REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+          REACT_APP_FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
         with:
