--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         run: npm install
       - name: Run Tests
         env:
-          CI: true
+          CI: false
         run: npm test
       - name: Build
         run: npm run build
